# aya

./: RELEASE.md
.github/workflows/: ci.yml  gen.yml
aya/: CHANGELOG.md  Cargo.toml
aya-ebpf-macros/: CHANGELOG.md
aya-log/: CHANGELOG.md  Cargo.toml
aya-log-common/: CHANGELOG.md
aya-log-ebpf-macros/: CHANGELOG.md  Cargo.toml
aya-log-parser/: CHANGELOG.md  Cargo.toml
aya-log/src/: lib.rs
aya-obj/: CHANGELOG.md  Cargo.toml
aya-obj/src/: obj.rs
aya-obj/src/btf/: btf.rs  relocation.rs
aya/src/: util.rs
aya/src/maps/: bloom_filter.rs  lpm_trie.rs  mod.rs  queue.rs  stack.rs  stack_trace.rs
aya/src/maps/array/: array.rs  per_cpu_array.rs  program_array.rs
aya/src/maps/hash_map/: hash_map.rs  mod.rs  per_cpu_hash_map.rs
aya/src/maps/perf/: perf_buffer.rs  perf_event_array.rs
aya/src/maps/sock/: sock_hash.rs  sock_map.rs
aya/src/maps/xdp/: cpu_map.rs  dev_map.rs  xsk_map.rs  (+1 more)
aya/src/programs/: utils.rs
aya/src/sys/: bpf.rs  netlink.rs
ebpf/aya-ebpf/: CHANGELOG.md  Cargo.toml
ebpf/aya-ebpf-bindings/: CHANGELOG.md
ebpf/aya-ebpf-cty/: CHANGELOG.md
ebpf/aya-ebpf/src/: lib.rs
ebpf/aya-log-ebpf/: CHANGELOG.md  Cargo.toml
test/integration-ebpf/src/: array.rs  bpf_probe_read.rs  lib.rs  linear_data_structures.rs  log.rs  map_test.rs  memmove_test.rs  name_test.rs  pass.rs  perf_event_bp.rs  raw_tracepoint.rs  redirect.rs  relocations.rs  ring_buf.rs  simple_prog.rs  sk_storage.rs  strncmp.rs  tcx.rs  test.rs  two_progs.rs  uprobe_cookie.rs  xdp_sec.rs
test/integration-test/: Cargo.toml
xtask/: Cargo.toml
xtask/public-api/: aya.txt
(+1 files in other folders)
