[package]
description = "A library for writing eBPF programs"
name = "aya-ebpf"
version = "0.1.2"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aya-ebpf-bindings = { path = "../aya-ebpf-bindings" }
aya-ebpf-cty = { path = "../aya-ebpf-cty" }
aya-ebpf-macros = { path = "../../aya-ebpf-macros" }

[build-dependencies]
aya-build = { path = "../../aya-build" }
rustversion = { workspace = true }
